--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
 
     
 <!-- Analytics -->
- 
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4QSTRD06HT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4QSTRD06HT');
+</script>
+
 <!-- Analytics END -->
     
 </head>
