--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <!-- Analytics -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4QSTRD06HT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S31EG6R1EZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4QSTRD06HT');
+  gtag('config', 'G-S31EG6R1EZ');
 </script>
 
 <!-- Analytics END -->
