--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,15 @@
 
     
 <!-- Analytics -->
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S31EG6R1EZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S31EG6R1EZ');
+</script>
 <!-- Analytics END -->
     
 </head>
