--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="col-sm-12">
 				<img src="img_compressée/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, Entreprise web design Lyon, création logo " />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
+					La chouette agence
 				</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -92,7 +92,8 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
-					La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.
+					La chouette agence est une agence de web design </br>
+					qui aide les entreprises à devenir attractives et visibles sur internet.
 				</h2>
 			</div>
 		</div>
