--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">page2</a>
 					</li>
 				</ul>
 			</div>
@@ -90,7 +90,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>
-					La chouette agence est une agence de web design </br>
+					La chouette agence est une agence de web design <br>
 					qui aide les entreprises à devenir attractives et visibles sur internet.
 				</h2>
 			</div>
@@ -132,6 +132,12 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<p>
+					"La chouette agence est une excellente agence web !<br>
+					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+					<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>
+					<span>Maxime Guilbard, PDG de A vos fourchettes</span>
+				</p>
 				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
 
 			</div>
@@ -235,22 +241,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
