test style texte

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
 				</h3>
-				<p class="text-center ">
+				<p class="text-center">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -132,11 +132,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p>
+				<p class="row voffset-lg med-width-whitespace">
 					"La chouette agence est une excellente agence web !<br>
 					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
 					<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>
-					<span>Maxime Guilbard, PDG de A vos fourchettes</span>
+						<span>Maxime Guilbard, PDG de A vos fourchettes</span>
 				</p>
 				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
 
