--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
+				<p class="img-text-2">
+					Nous travaillons avec beaucoup de clients,<br>
+					voici nos réalisations
+				</p>
 				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 			</div>
 		</div>
