--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
 			<div class="col-sm-12 text-center">
 				<p class="img-text-2">
 					Nous travaillons avec beaucoup de clients,<br>
-					voici nos réalisations
+					voici nos réalisations :
 				</p>
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
