--- a/page2.html
+++ b/page2.html
@@ -85,7 +85,7 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label for="Nom">
+						<label>
 							Nom
 						</label>
 						<input name="name" id="name" class="form-control" required />
