--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 <!-- Analytics -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S31EG6R1EZ"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2RW5W2DT5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S31EG6R1EZ');
+  gtag('config', 'G-X2RW5W2DT5');
 </script>
-
 <!-- Analytics END -->
 </head>
 <body>
