--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,15 @@
 
     
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2RW5W2DT5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-X2RW5W2DT5');
+</script>
 <!-- Analytics END -->
     
 </head>
