--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img_compressée/la-chouette-agence.png" alt="Logo de la chouette agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img_webp/AnyConv.com__la-chouette-agence.webp" alt="Logo de la chouette agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -69,7 +69,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img_compressée/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, Entreprise web design Lyon, création logo " />
+				<img src="img_webp/AnyConv.com__logo.webp" class="center-block image-resize-mode" width="100" alt="La chouette agence, Entreprise web design Lyon, création logo " />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence
 				</h1>
@@ -172,7 +172,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img_compressée/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img_compressée/1.jpg" alt="“Entreprise web design Lyon, refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img_webp/AnyConv.com__1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__1.webp" alt="“Entreprise web design Lyon, refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -181,7 +181,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img_compressée/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img_compressée/2.jpg" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img_webp/AnyConv.com__2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__2.webp" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -192,7 +192,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img_compressée/3.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img_compressée/3.png" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img_webp/AnyConv.com__3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__3.webp" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -201,7 +201,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox=img_compressée/4.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img_compressée/4.png" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img_webp/AnyConv.com__4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__4.webp" class="img-responsive portfolio-thumb" alt="“Entreprise web design Lyon, Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
