--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La chouette agence, notre mission: rendre votre site web attractif et visible
+    <title>La chouette agence - Entreprise de webdesign à Lyon
 	</title>
-
-
-    
 <!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X2RW5W2DT5"></script>
@@ -55,7 +51,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="page2.html">Contactez-nous</a>
 					</li>
 				</ul>
 			</div>
