--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+	<meta name="keywords" content="chouette agence, conception site web, seo , entreprise webdesign lyon, création site, agence webdesign Lyon">
     <meta name="description" content="Page de contact">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
