--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-	<meta name="keywords" content="chouette agence, conception site web, seo , entreprise webdesign lyon, création site, agence webdesign Lyon">
     <meta name="description" content="Notre agence webdesign aide les entreprises Lyonnaises à se développer et à connaître le succès.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -236,22 +235,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#" alt="icone twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#" alt="icone facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#" alt="icone dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#" alt="icone instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" alt="icone instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
