--- a/index.html
+++ b/index.html
@@ -235,22 +235,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="icone twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#" alt="icone twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="icone facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#" alt="icone facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="icone dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#" alt="icone dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="icone instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#" alt="icone instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
