--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
