--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					<strong>La chouette agence - Agence web basée à Lyon<br></strong>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
