--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span><br>
+							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span>
 								
 						</div>
 					</div>
