--- a/index.html
+++ b/index.html
@@ -235,23 +235,31 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span>
+								<br><span class="sr-only">Twitter</span>
+							</a>
 								
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span>
+								<br><span class="sr-only">Facebook</span>
+							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span>
+								<br><span class="sr-only">Dribble</span>
+							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span>
+								<br><span class="sr-only">Instagram</span>
+							</a>
 						</div>
 					</div>
 				</div>
