--- a/index.html
+++ b/index.html
@@ -45,15 +45,6 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">Contactez-nous</a>
-					</li>
-				</ul>
-			</div>
 		</nav>
 	</div>
 </div>
@@ -68,6 +59,9 @@
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence
 				</h1>
+				<div class="text-center">
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -94,7 +88,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
