--- a/page2.html
+++ b/page2.html
@@ -72,25 +72,25 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label>
+						<label for="nom">
 							Nom
 						</label>
-						<input name="name" id="name" class="form-control" required />
+						<input type="text" name="name" id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="adresse email">
 							Adresse email
 						</label>
 						<input name="email" id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="comment nous avez-vous connu ?">
 							Comment nous avez-vous connu ?
 						</label>
 						<input class="form-control" type="email" required id="input_504" name="input_504"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="Brief de votre projet (ajoutez autant de détails que nécessaire)">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea name="message" id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
