--- a/Contact.html
+++ b/Contact.html
@@ -42,6 +42,15 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
+			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+				<ul class="site-navigation nav navbar-nav">
+					<li>
+					</li>
+					<li>
+						<a href="index.html">Accueil</a>
+					</li>
+				</ul>
+			</div>
 		</nav>
 	</div>
 </div>
