--- a/Contact.html
+++ b/Contact.html
@@ -44,7 +44,9 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li>
+					<li> Partenaires
+					</li>
+					<li> Portfolio
 					</li>
 					<li>
 						<a href="index.html">Accueil</a>
