--- a/Contact.html
+++ b/Contact.html
@@ -46,7 +46,8 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li> Partenaires
 					</li>
-					<li> Portfolio
+					<li> 
+						<a href="#">Portfolio </a>
 					</li>
 					<li>
 						<a href="index.html">Accueil</a>
