--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="Contact.html">Contactez-nous</a>
+						<a href="index.html">Accueil</a>
+					</li>
+					<li>
+					</li>
+					<li>
+						<a href="contact.html">Contact &gt;</a>
 					</li>
 				</ul>
 			</div>
