--- a/Contact.html
+++ b/Contact.html
@@ -44,7 +44,8 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li> Partenaires
+					<li> 
+						<a href="#">Partenaires</a>
 					</li>
 					<li> 
 						<a href="#">Portfolio </a>
