--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="#">Partenaires</a>
 					</li>
 					<li>
+						<a href="#">Portfolio </a>
 					</li>
 					<li>
-						<a href="contact.html">Contact &gt;</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
