--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<a href="#">Portfolio </a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="Contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
