--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence
 				</h1>
+				<h2 class="text-center hero-bloc-text tc-white ">
+					Agence webdesign à Lyon
+				</h2>
 				<div class="text-center">
 					<a href="Contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
