--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					Web design
+					Webdesign
 				</h3>
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -173,7 +173,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img_webp/AnyConv.com__1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__1.webp" alt="“Entreprise web design Lyon, refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img_webp/AnyConv.com__1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img_webp/AnyConv.com__1.webp" alt="“Entreprise webdesign Lyon, refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -236,7 +236,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					<strong>La chouette agence - Agence web basée à Lyon<br></strong>
+					<strong>La chouette agence - Agence webdesign basée à Lyon<br></strong>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
