--- a/Contact.html
+++ b/Contact.html
@@ -133,7 +133,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					<strong>La chouette agence - Agence web basée à Lyon<br></strong>
+					<strong>La chouette agence - Agence webdesign basée à Lyon<br></strong>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
